--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
 <p>&nbsp;</p>
 <h4><strong>Check Availability</strong></h4>
 <p><iframe style="border: 0;" src="https://calendar.google.com/calendar/embed?src=ethan.jackson1%40compbizblog.com&amp;ctz=America%2FNew_York" width="650" height="450" frameborder="0" scrolling="no"></iframe></p>
+<p><strong><strong>Disclaimer:</strong></strong></p>
+<p><strong><strong><strong>Attorney Advertising:</strong></strong></strong> The information contained on this page does not create an attorney-client relationship nor should any information be considered legal advice as it is intended to provide general information only. Prior case results do not guarantee a similar outcome.&nbsp;</p>
 </div>
 
 
